--- a/ur5_moveit_config/config/moveit_cpp.yaml
+++ b/ur5_moveit_config/config/moveit_cpp.yaml
@@ -8,19 +8,18 @@ planning_scene_monitor_options:
   wait_for_initial_state_timeout: 5.0
 
 planning_pipelines:
-  pipeline_names: ["ompl", "pilz_industrial_motion_planner", "chomp"]
+  pipeline_names: ["ompl", "pilz_industrial_motion_planner", "chomp", "stomp"]
 
 plan_request_params:
-  planner_id: ompl_rrtc
   planning_time: 10.0
-  planning_attempts: 10
+  planning_attempts: 50
   planning_pipeline: ompl
   max_velocity_scaling_factor: 0.5
   max_acceleration_scaling_factor: 0.5
 
 ompl_rrtc:  # Namespace for individual plan request
   plan_request_params:  # PlanRequestParameters similar to the ones that are used by the single pipeline planning of moveit_cpp
-    planning_attempts: 10  # Number of attempts the planning pipeline tries to solve a given motion planning problem
+    planning_attempts: 50  # Number of attempts the planning pipeline tries to solve a given motion planning problem
     planning_pipeline: ompl  # Name of the pipeline that is being used
     planner_id: "RRTConnectkConfigDefault"  # Name of the specific planner to be used by the pipeline
     max_velocity_scaling_factor: 1.0  # Velocity scaling parameter for the trajectory generation algorithm that is called (if configured) after the path planning
@@ -42,4 +41,12 @@ chomp_planner:
     planning_pipeline: chomp
     max_velocity_scaling_factor: 1.0
     max_acceleration_scaling_factor: 1.0
+    planning_time: 1.5
+
+stomp_planner:
+  plan_request_params:
+    planning_attempts: 10
+    planning_pipeline: stomp
+    max_velocity_scaling_factor: 0.25
+    max_acceleration_scaling_factor: 0.25
     planning_time: 1.5
