changed to effort controllers for gripper, tuned pid values, fixed gripper urdf

--- a/ur5_moveit_config/CMakeLists.txt
+++ b/ur5_moveit_config/CMakeLists.txt
@@ -3,19 +3,10 @@ project(ur5_moveit_config)
 
 find_package(ament_cmake REQUIRED)
 
-# Install Python execs
-ament_python_install_package(${PROJECT_NAME})
-
-install(PROGRAMS
-  scripts/picknplace
-  scripts/follow_pose
-  DESTINATION lib/${PROJECT_NAME}
-)
-
 ament_package()
 
 install(
-  DIRECTORY config launch srdf
+  DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
   PATTERN "setup_assistant.launch" EXCLUDE)
 install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
