--- a/ur5_moveit_config/config/moveit_controllers.yaml
+++ b/ur5_moveit_config/config/moveit_controllers.yaml
@@ -21,8 +21,11 @@ moveit_simple_controller_manager:
     action_ns: follow_joint_trajectory
     default: true
   robotiq_gripper_controller:
-    type: GripperCommand
+    type: FollowJointTrajectory
+    action_ns: follow_joint_trajectory
+    default: true
     joints:
       - robotiq_85_left_knuckle_joint
-    action_ns: gripper_cmd
+      - robotiq_85_right_knuckle_joint
+    action_ns: follow_joint_trajectory
     default: true
