--- a/ur5_moveit_config/config/ros2_controllers.yaml
+++ b/ur5_moveit_config/config/ros2_controllers.yaml
@@ -8,7 +8,7 @@ controller_manager:
 
 
     robotiq_gripper_controller:
-      type: position_controllers/GripperActionController
+      type: joint_trajectory_controller/JointTrajectoryController
 
 
     joint_state_broadcaster:
@@ -25,10 +25,60 @@ joint_trajectory_controller:
       - wrist_3_joint
     command_interfaces:
       - position
+      - velocity
     state_interfaces:
       - position
       - velocity
-    allow_nonzero_velocity_at_trajectory_end: true
-robotiq_gripper_controller:
+    gains:
+      shoulder_pan_joint:
+        p: 4000.0
+        d: 10.0
+        i: 250.0
+        i_clamp: 15.0
+      shoulder_lift_joint:
+        p: 10000.0
+        d: 25.0
+        i: 600.0
+        i_clamp: 45.0
+      elbow_joint:
+        p: 8000.0
+        d: 20.0
+        i: 450.0
+        i_clamp: 30.0
+      wrist_1_joint:
+        p: 6000.0
+        d: 15.0
+        i: 300.0
+        i_clamp: 30.0
+      wrist_2_joint:
+        p: 3000.0
+        d: 5.0
+        i: 175.0
+        i_clamp: 7.0
+      wrist_3_joint:
+        p: 2500.0
+        d: 3.0
+        i: 150.0
+        i_clamp: 6.0
+
+gripper_controller:
   ros__parameters:
-    joint: robotiq_85_left_knuckle_joint
+    joints:
+      - robotiq_85_left_knuckle_joint
+      - robotiq_85_right_knuckle_joint
+    command_interfaces:
+      - effort
+    state_interfaces:
+      - position
+      - velocity
+    gains:  
+    robotiq_85_left_knuckle_joint:
+      p: 225.0
+      d: 0.001
+      i: 0.4
+      i_clamp: 4.0
+    robotiq_85_right_knuckle_joint:
+      p: 225.0
+      d: 0.001
+      i: 0.4
+      i_clamp: 4.0
