--- a/ur5_moveit_config/config/kinematics.yaml
+++ b/ur5_moveit_config/config/kinematics.yaml
@@ -1,12 +1,8 @@
 ur5_arm:
-  kinematics_solver: pick_ik/PickIkPlugin
+  kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
+  # kinematics_solver: cached_ik_kinematics_plugin/CachedKDLKinematicsPlugin
+  # kinematics_solver: lma_kinematics_plugin/LMAKinematicsPlugin
+  kinematics_solver_search_resolution: 0.0025
   kinematics_solver_timeout: 0.05
-  kinematics_solver_attempts: 3
-  mode: global
-  position_scale: 1.0
-  rotation_scale: 0.5
-  position_threshold: 0.001
-  orientation_threshold: 0.01
-  cost_threshold: 0.001
-  minimal_displacement_weight: 0.0
-  gd_step_size: 0.0001
+  kinematics_solver_attempts: 5
+  # max_cache_size: 100000
