--- a/ur5_moveit_config/CMakeLists.txt
+++ b/ur5_moveit_config/CMakeLists.txt
@@ -8,6 +8,9 @@ ament_python_install_package(${PROJECT_NAME})
 
 install(PROGRAMS
   scripts/world_bottle/picknplace_bottle_low
+  scripts/world_bottle/picknplace_bottle_high
+  scripts/world_bottle/picknplace_cube_low
+  scripts/world_bottle/picknplace_cube_high
   DESTINATION lib/${PROJECT_NAME}
 )
 
