Modified worlds, added manipulation of pot and faucet

--- a/ur5_moveit_config/CMakeLists.txt
+++ b/ur5_moveit_config/CMakeLists.txt
@@ -8,9 +8,16 @@ ament_python_install_package(${PROJECT_NAME})
 
 install(PROGRAMS
   scripts/world_bottle/picknplace_bottle_low
-  scripts/world_bottle/picknplace_bottle_high
+  scripts/world_bottle/picknplace_bottle_same
   scripts/world_bottle/picknplace_cube_low
-  scripts/world_bottle/picknplace_cube_high
+  scripts/world_bottle/picknplace_cube_same
+  scripts/world_bottle_high/picknplace_cube_high
+  scripts/world_pot_faucet/picknplace_pot_low
+  scripts/world_pot_faucet/picknplace_faucet_same
+  scripts/world_pot_faucet/picknplace_faucet_low
+  scripts/world_pot_faucet_high/picknplace_faucet_high
+  scripts/code_template/code_template.py
+  scripts/code_template/template_test.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
